Update and rename App.py to index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
-import pyttsx3
-voice = pyttsx3.init()
 class A():
     def __init__(self):
         self.Dict = {}
 
     def Demand(self):
-        voice.say("Welcome TO Contact Book!")
-        voice.runAndWait()
+<!--         voice.say("Welcome TO Contact Book!")
+        voice.runAndWait() -->
         Dmnd = input("Enter Demand: ")
         Dmnd = int(Dmnd)
 
